tests/paczka1/small_fuzzy/30120538.err
Error in line 4: fdGbpbR A89 18,2
Error in line 7: fdGbpbR S522 474,5
Error in line 9: fdGbpbR A89 79,0
Error in line 10: nMJ1w5fCnH S522 89,5
Error in line 11: fdGbpbR A421 39,0
